# cudanet

./: CMakeLists.txt  README.md
src/: conv2d.cu  conv2d.h  main.cpp  perf.cu  perf.h  test.cu  test.h
